<resources>
    <string name="banner_ad_unit_id">ca-app-pub-6477313612559797/1131708462</string>

    <string name="app_name">Mileage Tracker</string>
    <string name="nav_title_name">Mileage Tracker App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>

    <!--Drawer-->
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="mpg_graph">MPG Graph</string>
    <string name="settings">Settings</string>

<!--stats page-->
    <string name="stats_title">Vehicle Stats</string>
    <string name="init_message_one_more_entry">This vehicle needs one more entry to calculate Statistics!</string>

<!--init message/button-->
    <string name="init_message_no_vehicles">There are no vehicles created. Click the button below to get started!</string>
    <string name="init_message_no_data">This vehicle needs data to create a record. Click the button below to create an entry!</string>

<!--add record-->
    <string name="add_entry">Add Entry</string>
    <string name="gas_station">Gas Station:</string>
    <string name="odometer">Odometer:</string>
    <string name="gallons">Gallons:</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="gas_station_hint">none</string>
    <string name="odometer_hint">odometer</string>
    <string name="quantity_hint">quantity</string>
    <string name="price_hint">price</string>
    <string name="date_hint">Jan-1-2016</string>
    <string name="wrong_number_format">Wrong Number Format</string>
    <string name="add_record_button_description">submit record</string>

<!--edit record-->
    <string name="edit_record">Edit Record</string>
    <string name="alert_dialog_delete_record_message">This will delete this entry. Are you sure you want to continue?</string>

<!--add vehicle-->
    <string name="add_vehicle">Add Vehicle</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="year_hint">ex: 2015</string>
    <string name="invalid_car">Invalid Vehicle</string>
    <string name="invalid_year">Invalid year, please try again</string>
    <string name="reasonable_length">Make and model need to be 3 to 16 characters long</string>
    <string name="reasonable_year">Please enter a reasonable car year</string>
    <string name="invalid_make_or_type">Invalid vehicle make or type</string>
    <string name="add_vehicle_button_description">add new vehicle button</string>


<!--edit vehicle-->
    <string name="add_edit_vehicles">Add/Edit Vehicles</string>
    <string name="delete_record">Delete Record</string>
    <string name="long_press_item">Long-press on item to edit or delete entry</string>

<!--vehicle list-->
    <string name="current_vehicle_list">Current Vehicles</string>
    <string name="notify_long_press">Long press on item to delete vehicle</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_delete_vehicle_message">This will delete all your data stored for this vehicle! Are you sure you want to continue?</string>
    <string name="alert_dialog_delete_vehicle_title">Delete Vehicle</string>
    <string name="delete_flag">Delete??</string>

<!--graph-->
    <string name="need_more_data1">Please press "Add Record" to get started!</string>
    <string name="need_more_data2">Need more entries to create a graph for this vehicle</string>
    <string name="zoom_scroll_text">Zoom, Scroll, or Pan the Graph. Rotate to Landscape for larger view.</string>

<!--back press toast-->
    <string name="backpress">Press back again to exit</string>

<!--Settings Page-->
    <string name="title_activity_settings">Settings</string>
    <string name="future_length_quanity">This feature will be implemented soon!</string>
    <string name="garage">Current vehicles in your garage:</string>
    <string name="add">Click the button to add a vehicle to your garage</string>
    <string name="delete">Delete a vehicle from your garage</string>
    <string name="add_button">Add Vehicle</string>
    <string name="delete_button">Delete Vehicle(s)</string>
    <string name="no_vehicles_created">no vehicles created</string>

<!--spreadsheet-->
    <string name="export_data_title">Export Data</string>
    <string name="alert_email_to_yourself">This will create a spreadsheet of all your collected data.</string>
    <string name="alert_send">Send</string>
    <string name="alert_cancel">Cancel</string>
    <string name="not_enough_memory">Not enough memory to export</string>
    <string name="no_data_to_export">No Data to Export!</string>
    <string name="ok">OK</string>
    <string name="data_for">Data for </string>

<!--analytics-->
    <string name="add_record_analytic_tag">AddRecordDialogFragment</string>
    <string name="vehicle_added_analytic_tag">Vehicle Added</string>
    <string name="edit_history_analytic_tag">EditHistoryFragment</string>
    <string name="graph_fragment_analytic_tag">GraphFragment</string>
    <string name="history_fragment_analytic_tag">HistoryFragment</string>
    <string name="stats_fragment_analytic_tag">StatsFragment</string>
    <string name="deleted_vehicle_analytic_tag">Deleted Vehicle</string>

<!--widget-->
    <string name="widget_screen_name">MPG Simple Stats</string>
    <string name="widget_mpg_placeholder">29.58 MPG</string>
    <string name="widget_miles_tracked_placeholder">1,852 miles tracked</string>
    <string name="widget_content_description">Mileage Tracker App Widget</string>

</resources>