<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_add_record"
            android:icon="@drawable/ic_plus_grey600_48dp"
            android:title="@string/add_entry" />
        <item android:id="@+id/nav_history_list"
            android:icon="@drawable/ic_clock_grey600_48dp"
            android:title="@string/history" />
        <item android:id="@+id/nav_stats"
            android:icon="@drawable/ic_file_chart_grey600_48dp"
            android:title="@string/stats" />
        <item android:id="@+id/nav_graph"
            android:icon="@drawable/ic_chart_line_grey600_48dp"
            android:title="@string/mpg_graph" />
    </group>

    <group android:id="@+id/divider_line">
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_48dp"
            android:title="@string/settings" />
        <item android:id="@+id/nav_send"
            android:icon="@drawable/ic_share_variant_grey600_48dp"
            android:title="@string/export_data_title" />
    </group>
</menu>