<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightgray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_record"
        android:textColor="#fff"
        android:textSize="@dimen/dialog_header_text_size"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                tools:hint="vehicle text"
                android:id="@+id/current_vehicle_edit_record_frag"
                android:textSize="20sp"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"
                android:layout_marginTop="@dimen/grid_margin_top"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_gravity="center">

                <TextView
                    android:textSize="24sp"
                    android:text="@string/gas_station" />
                <EditText
                    android:id="@+id/edit_station_location"
                    android:hint="@string/gas_station_hint"
                    android:ems="5"
                    android:gravity="start"
                    android:textColorHint="@color/verylightgrey"
                    android:background="@color/entryTextBoxColor"
                    android:textSize="@dimen/entry_text_size"
                    android:layout_marginBottom="12dp"
                    android:inputType="textCapWords"/>

                <TextView
                    android:textSize="24sp"
                    android:text="@string/odometer"/>

                <EditText
                    android:id="@+id/edit_mileage"
                    android:hint="@string/odometer_hint"
                    android:ems="5"
                    android:gravity="start"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:textSize="24sp"
                    android:text="@string/gallons"/>

                <EditText
                    android:id="@+id/edit_gallons"
                    android:gravity="start"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:textSize="24sp"
                    android:text="@string/price"/>

                <EditText
                    android:id="@+id/edit_price"
                    android:gravity="start"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:background="@color/entryTextBoxColor"
                    android:ems="5"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:textSize="24sp"
                    android:text="@string/date"/>

                <EditText
                    android:id="@+id/edit_date"
                    android:inputType="date"
                    android:hint="@string/date_hint"
                    android:gravity="start"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="56dp"
                    android:layout_marginEnd="56dp"
                    android:background="@color/entryTextBoxColor"/>

            </GridLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <Button
                    style="@style/button_style"
                    android:id="@+id/delete_details_button"
                    android:background="@drawable/custom_button_delete"
                    android:backgroundTint="@color/deleteButtonStart"
                    android:textSize="@dimen/edit_record_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_record"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_margin="12dp"
                    android:textAllCaps="false"/>

                <Button
                    style="@style/button_style"
                    android:id="@+id/edit_details_submit_button"
                    android:background="@drawable/custom_button_edit"
                    android:textSize="@dimen/edit_record_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_record"
                    android:textAllCaps="false"
                    android:singleLine="true"
                    android:layout_margin="12dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
