<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:padding="8dp">

        <ImageView
            android:contentDescription="@string/widget_content_description"
            android:id="@+id/widget_icon"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/old_car" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/widget_icon"
            android:layout_toEndOf="@+id/widget_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/last_mpg_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceListItemSmall"
                tools:text="@string/widget_mpg_placeholder"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/miles_tracked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                tools:text="@string/widget_miles_tracked_placeholder"
                android:maxLines="1"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>