<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_settings"
    tools:context="com.radicaldroids.mileage.SettingsActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--future development-->
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Select a length measurement"/>-->

            <!--<Switch-->
                <!--android:layout_marginTop="12dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/entry_text_size"-->
                <!--android:textOn="Miles"-->
                <!--android:textOff="Kilometers"-->
                <!--android:id="@+id/switch_distance"-->
                <!--android:layout_marginLeft="56dp"/>-->
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:background="@android:color/darker_gray"/>-->
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Select a quantity measurement"/>-->
            <!--<Switch-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/entry_text_size"-->
                <!--android:textOn="Gallons"-->
                <!--android:textOff="Liters"-->
                <!--android:layout_marginTop="12dp"-->
                <!--android:id="@+id/switch_quantity"-->
                <!--android:layout_marginLeft="56dp"/>-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:background="@android:color/darker_gray"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="12dp"
                android:id="@+id/garage_textview"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Button
                android:id="@+id/add_vehicle"
                style="@style/button_style"
                android:textSize="16sp"
                android:background="@drawable/custom_button"
                android:text="@string/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:elevation="6dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>
            <Button
                android:id="@+id/delete_button"
                style="@style/button_style"
                android:background="@drawable/custom_button"
                android:textSize="16sp"
                android:text="@string/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="12dp"
                android:elevation="6dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
